# encase

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
benches/: throughput.rs  troughput.rs
derive/: Cargo.toml
derive/impl/: Cargo.toml
derive/impl/src/: lib.rs
derive/src/: lib.rs
src/: const_str.rs  lib.rs  utils.rs
src/core/: alignment_value.rs  buffers.rs  mod.rs  rw.rs  size_value.rs  traits.rs
src/impls/: archery.rs  arrayvec.rs  cgmath.rs  glam.rs  im.rs  im_rc.rs  imbl.rs  mint.rs  mod.rs  nalgebra.rs  ndarray.rs  rpds.rs  smallvec.rs  static_rc.rs  tinyvec.rs  ultraviolet.rs  vek.rs
src/types/: array.rs  matrix.rs  mod.rs  runtime_sized_array.rs  scalar.rs  struct.rs  vector.rs  wrapper.rs
test_impl/: Cargo.toml
test_impl/src/: lib.rs
tests/: assert_uniform_compat_fail.rs  assert_uniform_compat_success.rs  errors.rs  general.rs  hygiene.rs  metadata.rs  single_member.rs  trybuild.rs  uniform.rs  wgpu.rs
tests/compile_fail/: array_length_err.rs  array_length_err.stderr  assert_uniform_compat.rs  assert_uniform_compat.stderr  duplicate_attributes.rs  duplicate_attributes.stderr  general_struct_err.rs  general_struct_err.stderr  invalid_align_attr.rs  invalid_align_attr.stderr  invalid_size_attr.rs  invalid_size_attr.stderr
tests/pass/: assert_uniform_compat.rs  attributes.rs  wrappers.rs
tests/shaders/: array_length.wgsl  general.wgsl
