[package]
name = "encase"
version = "0.6.1"
edition = "2021"
rust-version = "1.64"

license = "MIT-0"
readme = "./README.md"
description = "Provides a mechanism to lay out data into GPU buffers ensuring WGSL's memory layout requirements are met"
repository = "https://github.com/teoxoy/encase"
documentation = "https://docs.rs/encase"
keywords = ["wgsl", "wgpu"]
categories = ["rendering"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs"]

[profile.bench]
lto = "thin"
codegen-units = 1
# debug = true # for profiling

[[bench]]
name = "troughput"
harness = false

[workspace]
members = ["derive", "derive/impl"]

[dependencies]
encase_derive = { version = "=0.6.1", path = "derive" }

thiserror = { version = "1", default-features = false }
const_panic = { version = "0.2", default-features = false }

mint = { version = "0.5.9", default-features = false, optional = true }
cgmath = { version = "0.18", default-features = false, optional = true }
glam = { version = "0.24", features = ["std"], default-features = false, optional = true }
nalgebra = { version = "0.32", default-features = false, optional = true }
ultraviolet = { version = "0.9", features = ["int"], default-features = false, optional = true }
vek = { version = "0.15", default-features = false, optional = true }
smallvec = { version = "1.8.0", features = ["const_generics"], default-features = false, optional = true }
arrayvec = { version = "0.7", default-features = false, optional = true }
tinyvec = { version = "1.4", features = ["rustc_1_55", "alloc"], default-features = false, optional = true }
ndarray = { version = "0.15", default-features = false, optional = true }
rpds = { version = "0.13", default-features = false, optional = true }
archery = { version = "0.5", default-features = false, optional = true }
im = { version = "15", default-features = false, optional = true }
im-rc = { version = "15", default-features = false, optional = true }
imbl = { version = "2", default-features = false, optional = true }
static-rc = { version = "0.6", features = ["alloc"], default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["cargo_bench_support", "html_reports"], default-features = false }
rand = { version = "0.8", features = ["std_rng"], default-features = false }
mimalloc = { version = "0.1", default-features = false }
wgpu = { version = "0.15", features = ["wgsl"], default-features = false }
futures = { version = "0.3", features = ["executor"], default-features = false }
pprof = { version = "0.11", features = ["criterion", "flamegraph"], default-features = false }
trybuild = { version = "1", default-features = false }
