[package]
name = "encase"
version = "0.11.2"
edition = "2021"
rust-version = "1.77"

license = "MIT-0"
readme = "./README.md"
description = "Provides a mechanism to lay out data into GPU buffers ensuring WGSL's memory layout requirements are met"
repository = "https://github.com/teoxoy/encase"
documentation = "https://docs.rs/encase"
keywords = ["wgsl", "wgpu"]
categories = ["rendering"]

[package.metadata.docs.rs]
all-features = true

[profile.bench]
lto = "thin"
codegen-units = 1
# debug = true # for profiling

[[bench]]
name = "throughput"
harness = false

[workspace]
members = ["derive", "derive/impl"]

[dependencies]
encase_derive = { version = "=0.11.2", path = "derive" }

thiserror = { version = "2", default-features = false }
const_panic = { version = "0.2", default-features = false }

mint = { version = "0.5.9", default-features = false, optional = true }
cgmath = { version = "0.18", default-features = false, optional = true }
glam = { version = "0.30", features = ["std"], default-features = false, optional = true }
nalgebra = { version = "0.33", default-features = false, optional = true }
ultraviolet = { version = "0.9", features = ["int"], default-features = false, optional = true }
vek = { version = "0.17", default-features = false, optional = true }
smallvec = { version = "1.8.0", features = ["const_generics"], default-features = false, optional = true }
arrayvec = { version = "0.7", default-features = false, optional = true }
tinyvec = { version = "1.4", features = ["rustc_1_55", "alloc"], default-features = false, optional = true }
ndarray = { version = "0.16", default-features = false, optional = true }
rpds = { version = "1", default-features = false, optional = true }
archery = { version = "1", default-features = false, optional = true }
im = { version = "15", default-features = false, optional = true }
im-rc = { version = "15", default-features = false, optional = true }
imbl = { version = "5", default-features = false, optional = true }
static-rc = { version = "0.6", features = ["alloc"], default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["cargo_bench_support", "html_reports"], default-features = false }
rand = { version = "0.9", features = ["std_rng"], default-features = false }
mimalloc = { version = "0.1", default-features = false }
wgpu = { version = "24.0.0", features = ["wgsl"] }
futures = { version = "0.3", features = ["executor"], default-features = false }
pprof = { version = "0.14", features = ["criterion", "flamegraph"], default-features = false }
trybuild = { version = "1", default-features = false }
