[package]
name = "encase_derive"
version = "0.1.1"
edition = "2021"

license = "MIT-0"
description = "Derive macro for encase"
repository = "https://github.com/teoxoy/encase"
documentation = "https://docs.rs/encase"
keywords = ["wgsl", "wgpu"]
categories = ["rendering"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0.56"
quote = "1"
proc-macro2 = "1"